# nlp-course-skupina-7

./: README.md  baseline_examples.md
evaluation/: auto-evaluate.py  dataset_cleanup.py  info.txt  manual_evaluation.py  mt5-base-rul-pruned_diplomske_results.json  mt5-base-rul-pruned_results.json  similarity.py  t5-sl-small_results.json
evaluation/data/: manual_evaluation_input.txt  mt5-base-rul-pruned_results.json  t5-sl-small_diplomske_results.json  t5-sl-small_results.json
evaluation/grades/: auto_mt5-base-rul-pruned.json  auto_t5-sl-large.json  auto_t5-sl-small.json  grades_mt5_m.json  grades_t5_m.json  joined_grades.json
nemo/: batch.sh  readme.md  translate.py
rul-scraper/: main.py  pyproject.toml  remove-similar-dataset-items.py
rul-scraper-alt/: README.md  requirements.txt  scraper.py
trainer/: nlp_model_test.ipynb  train_mt5_test.py  train_sbatch.sh
trainer-alt/: ParaphraseDataset.py  README.md  T5FineTuner.py  batch.sh  inference.py  mt5.py
